Implement veronica join with spark